--- a/src/style.css
+++ b/src/style.css
@@ -144,13 +144,25 @@ h1 {
   margin-bottom: 15px;
 }
 
-#alpha-control label {
+#alpha-velocity-control {
+  margin-bottom: 15px;
+}
+
+#alpha-acceleration-control {
+  margin-bottom: 15px;
+}
+
+#alpha-control label,
+#alpha-velocity-control label,
+#alpha-acceleration-control label {
   display: block;
   margin-bottom: 5px;
   font-size: 14px;
 }
 
-#alpha-slider {
+#alpha-slider,
+#alpha-velocity-slider,
+#alpha-acceleration-slider {
   width: 100%;
   margin: 5px 0;
 }
