wind estimation filter infrastructure, almost working

--- a/src/style.css
+++ b/src/style.css
@@ -185,7 +185,8 @@ h1 {
   font-weight: normal;
 }
 
-#speed-selector-container {
+#speed-selector-container,
+#polar-controls {
   display: flex;
   align-items: center;
   justify-content: center;
